--- a/airflow-base/airflow.cfg
+++ b/airflow-base/airflow.cfg
@@ -24,7 +24,7 @@ s3_log_folder =
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor
-executor = CeleryExecutor
+executor = LocalExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
@@ -67,7 +67,7 @@ load_examples = False
 plugins_folder = /usr/local/airflow/plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = $FERNET_KEY
+fernet_key =
 
 # Whether to disable pickling dags
 donot_pickle = False
@@ -223,7 +223,7 @@ worker_log_server_port = 8793
 # The Celery broker URL. Celery supports RabbitMQ, Redis and experimentally
 # a sqlalchemy database. Refer to the Celery documentation for more
 # information.
-broker_url = redis://redis:6379/1
+broker_url = 
 
 # Another key Celery setting
 celery_result_backend = db+postgresql://airflow:airflow@postgres/airflow
