--- a/airflow-base/Dockerfile
+++ b/airflow-base/Dockerfile
@@ -57,6 +57,9 @@ RUN set -ex \
     && pip install pyasn1 \
     && pip install apache-airflow[crypto,celery,postgres,hive,jdbc]==$AIRFLOW_VERSION \
     && pip install celery[redis]==3.1.17 \
+    && pip install docker \
+    && pip install docker-py \
+    && pip install docker-compose \
     && apt-get purge --auto-remove -yqq $buildDeps \
     && apt-get clean \
     && rm -rf \
