--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -7,6 +7,9 @@
 FROM esantos3/airflow-base:1.0.0
 MAINTAINER Eddie Santos <eddie.santos.3@gmail.com>
 
+ARG AIRFLOW_HOME=/usr/local/airflow
+COPY dags ${AIRFLOW_HOME}/dags
+
 EXPOSE 8080 5555 8793
 
 CMD ["airflow", "webserver"]
