--- a/my-project/Dockerfile
+++ b/my-project/Dockerfile
@@ -7,4 +7,13 @@
 FROM esantos3/airflow-base:1.0.0
 MAINTAINER Eddie Santos <eddie.santos.3@gmail.com>
 
+ARG PROJECT_HOME=/usr/local/project
+
+COPY ./requirements.txt ${PROJECT_HOME}/requirements.txt
+RUN pip install -r ${PROJECT_HOME}/requirements.txt
+
+COPY ./my-project.py ${PROJECT_HOME}/my-project.py
+
+WORKDIR ${PROJECT_HOME}
+
 CMD ["python", "my-project.py"]
