--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,7 +1,7 @@
 # VERSION 1.0.0
 # AUTHOR: Eddie Santos
 # DESCRIPTION: Basic Airflow container
-# BUILD: docker build --rm -t esantos3/airflow:1.0.0 .
+# BUILD: docker build --rm -t esantos3/airflow.
 # SOURCE: https://github.com/esantos3/airflow-docker
 # LINK: https://docs.docker.com/engine/installation/linux/docker-ce/centos/
 
@@ -24,10 +24,15 @@ RUN apt-get update -yqq \
     && apt-get install -yqq docker-ce
 
 ARG AIRFLOW_HOME=/usr/local/airflow
+
 COPY dags ${AIRFLOW_HOME}/dags
+
+RUN chown -R airflow: ${AIRFLOW_HOME}
 
 EXPOSE 8080 5555 8793
 
 USER airflow
+
+WORKDIR ${AIRFLOW_HOME}
 
 CMD ["airflow", "webserver"]
