--- a/airflow-base/Dockerfile
+++ b/airflow-base/Dockerfile
@@ -77,6 +77,7 @@ ARG BROKER_URL
 ENV AIRFLOW__CORE__SQL_ALCHEMY_CONN=$SQL_ALCHEMY_CONN
 ENV AIRFLOW__CORE__FERNET_KEY=$FERNET_KEY
 ENV AIRFLOW__CELERY__BROKER_URL=$BROKER_URL
+ENV AIRFLOW_HOME=${AIRFLOW_HOME}
 
 COPY airflow.cfg ${AIRFLOW_HOME}/airflow.cfg
 
