--- a/airflow-base/Dockerfile
+++ b/airflow-base/Dockerfile
@@ -48,7 +48,6 @@ RUN set -ex \
     && sed -i 's/^# en_US.UTF-8 UTF-8$/en_US.UTF-8 UTF-8/g' /etc/locale.gen \
     && locale-gen \
     && update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 \
-    && useradd -ms /bin/bash -d ${AIRFLOW_HOME} airflow \
     && python -m pip install -U pip setuptools wheel \
     && pip install Cython \
     && pip install pytz \
@@ -58,8 +57,8 @@ RUN set -ex \
     && pip install apache-airflow[crypto,celery,postgres,hive,jdbc]==$AIRFLOW_VERSION \
     && pip install celery[redis]==3.1.17 \
     && pip install docker \
-    && pip install docker-py \
-    && pip install docker-compose \
+#    && pip install docker-py \
+#    && pip install docker-compose \
     && apt-get purge --auto-remove -yqq $buildDeps \
     && apt-get clean \
     && rm -rf \
@@ -72,12 +71,9 @@ RUN set -ex \
 
 ARG SQL_ALCHEMY_CONN
 ARG FERNET_KEY
-ARG BROKER_URL
 
 ENV AIRFLOW__CORE__SQL_ALCHEMY_CONN=$SQL_ALCHEMY_CONN
 ENV AIRFLOW__CORE__FERNET_KEY=$FERNET_KEY
-ENV AIRFLOW__CELERY__BROKER_URL=$BROKER_URL
-ENV AIRFLOW_HOME=${AIRFLOW_HOME}
 
 COPY airflow.cfg ${AIRFLOW_HOME}/airflow.cfg
 
