--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -22,21 +22,15 @@ RUN apt-get update -yqq \
     	stable" \
     && curl -fsSL https://get.docker.com/ | sh
 
-RUN curl -L https://github.com/docker/compose/releases/download/1.14.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose \
-	&& chmod +x /usr/local/bin/docker-compose
-
 ARG AIRFLOW_HOME=/usr/local/airflow
+
 ENV AIRFLOW_HOME=${AIRFLOW_HOME}
 
 COPY dags ${AIRFLOW_HOME}/dags
 
-RUN chown -R airflow: ${AIRFLOW_HOME}
-# RUN usermod -aG docker airflow
-
 EXPOSE 8080 5555 8793
-
-# USER airflow
 
 WORKDIR ${AIRFLOW_HOME}
 
+CMD ["airflow", "scheduler"]
 CMD ["airflow", "webserver"]
