--- a/airflow-base/Dockerfile
+++ b/airflow-base/Dockerfile
@@ -12,7 +12,7 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV TERM linux
 
 # Airflow
-ARG AIRFLOW_VERSION=1.8.2
+ARG AIRFLOW_VERSION=1.9.0
 ARG AIRFLOW_HOME=/usr/local/airflow
 
 # Define en_US.
@@ -56,9 +56,6 @@ RUN set -ex \
     && pip install pyasn1 \
     && pip install apache-airflow[crypto,celery,postgres,hive,jdbc]==$AIRFLOW_VERSION \
     && pip install celery[redis]==3.1.17 \
-    && pip install docker \
-#    && pip install docker-py \
-#    && pip install docker-compose \
     && apt-get purge --auto-remove -yqq $buildDeps \
     && apt-get clean \
     && rm -rf \
@@ -77,4 +74,4 @@ ENV AIRFLOW__CORE__FERNET_KEY=$FERNET_KEY
 
 COPY airflow.cfg ${AIRFLOW_HOME}/airflow.cfg
 
-RUN ["airflow", "initdb"]
+RUN airflow initdb
